Create and use functions on tapstart and drag events

--- a/demo.html
+++ b/demo.html
@@ -70,7 +70,7 @@
 							{ data: { id: 'j', name: 'Jerry' } },
 							{ data: { id: 'e', name: 'Elaine', parent: 'j' } },
 							{ data: { id: 'k', name: 'Kramer', parent: 'j' } },
-							{ data: { id: 'g', name: 'George' } }
+							{ data: { id: 'g', name: 'George', parent: 'e' } }
 						],
 //						edges: [
 //							{ data: { source: 'j', target: 'e' } },
