--- a/demo.html
+++ b/demo.html
@@ -104,6 +104,8 @@
 
 	<body>
 		<h1>cytoscape-compound-resize demo</h1>
+                <p>Move or resize the nodes inside 'jerry' you can see that when the nodes are being moved to the right the outer size of 'jerry' will be conserved until the right padding is equal to the minimum right padding.</p>
+                <p>The same is true when you move a node to the left, but this time maximum right padding is used instead of the minimum one.</p>
 
 		<div id="cy"></div>
 
